--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,7 @@
 
 <p>title: <%= @article.title %></p>
 <p>description: <%= @article.description %> </p>
+
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?"} %> |
+<%= link_to 'Return to aricles listing', articles_path %>
