--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -22,7 +22,7 @@
 }
 
 .jumbotron {
-  background-image: asset-url('jimmy.jpg');
+  background-image: asset-url('toronto.jfif');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
