--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,6 +26,7 @@
                 <%= link_to "Delete user", user_path(user), class: "btn btn-outline-danger", method: :delete,
                 data: {confirm: "Are you sure you want to delete the user account and all associated articles?"} %>
               <% end %>
+            <% end %>
           </div>
           <div class="card-footer text-muted">
             <small>Joined <%= time_ago_in_words(user.created_at) %> ago</small>
@@ -36,6 +37,6 @@
   <% end %>
 </div>
 
-<div class="flickr_pagination">
-  <%= will_paginate @users, :container => false %>
+<div class="flickr_pagination mb-4">
+  <%= will_paginate @articles, :container => false %>
 </div>
